# GraphEngineGUI

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
CMakeUtils/: FolderConfigurator.cmake
Include/: Project.hpp
Include/ApiSetup/: FontLoader.hpp  FrameBuffer.hpp  ImGuiSetup.hpp  VulkanData.hpp  VulkanSetuper.hpp
Include/Controls/: MainWindow.hpp  Window.hpp
Include/Dialogs/: CreateElementDialog.hpp
Include/Style/Icons/: IconIDs.hpp
Include/Widgets/: ContentBrowserPanel.hpp
Src/: Project.cpp
Src/ApiSetup/: FontLoader.cpp  FrameBuffer.cpp  ImGuiSetup.cpp  VulkanData.cpp  VulkanSetuper.cpp
Src/Controls/: MainWindow.cpp  Window.cpp
Src/Dialogs/: CreateElementDialog.cpp
Src/Widgets/: ContentBrowserPanel.cpp
